# xianyu_rpa

./: .gitignore  README.md  build.spec  launcher.py  pyproject.toml  requirements.txt
assets/icon/: generate_icon.py  icon.icns
backend/: requirements.txt  run.py
backend/app/: config.py  database.py  main.py
backend/app/models/: conversation.py  delisting_log.py  delivery.py  listing_log.py  llm_config.py  log.py  settings.py  shop.py  task.py  task_log.py
backend/app/routers/: delisting_log.py  delivery.py  listing_log.py  llm.py  log.py  reply.py  settings.py  shop.py  task.py  task_log.py
backend/app/services/browser/: alibaba.py  manager.py  session.py  xianyu.py
backend/app/services/listing/: collector.py  delister.py  (+2 more)
backend/app/utils/: helpers.py  logger.py
backend/static/goofish_js/: goofish_sign.js
backend/static/web/: index.html
docs/: claude-code-prompt.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: delistingLog.js  delivery.js  listingLog.js  llm.js  log.js  reply.js  settings.js  shop.js  task.js  taskLog.js
frontend/src/components/: LogViewer.vue  StatCards.vue  TaskCard.vue
frontend/src/composables/: useTask.js  useWebSocket.js
frontend/src/router/: index.js
frontend/src/stores/: shop.js
frontend/src/views/: AutoReply.vue  Dashboard.vue  DelistingLogs.vue  Delivery.vue  LLMConfig.vue  ListingLogs.vue  Settings.vue  Shops.vue  TaskLogs.vue  Tasks.vue
scripts/: build_mac.sh  build_win.bat  setup.bat  setup.sh  start.bat  start.sh
(+60 files in other folders)
